frontend/Brunno Fixe problem with scrollbar
fixe problem with register page scrollbar, where it cut the text from top of form in path(src\css\login-register\register.css) and replacing input type from number to text in path(src\pages\login-register\register.html)

--- a/src/css/login-register/register.css
+++ b/src/css/login-register/register.css
@@ -12,11 +12,17 @@ form {
     background-color: white;
     max-width: 500px;
     width: 70%;
-    padding: 20px;
+    padding: 2.4rem 1.1rem 1.1rem;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 768px) {
+    form {
+        padding: 80px 20px 20px
+    }
 }
 
 form h3 {
@@ -32,8 +38,7 @@ form input[type=email],
 input[type=password],
 input[type=text],
 input[type=tel],
-input[type=date],
-input[type=number] {
+input[type=date] {
     width: 100%;
     height: 45px;
     border: 1px solid #ccc;
@@ -95,21 +100,23 @@ form p {
     padding-left: 10px;
 }
 
-#obs_password{
+#obs_password {
     font-family: cursive;
     padding-left: 6px;
     font-size: 12px;
     font-weight: bolder;
     margin: 10px 0px 15px 0px;
 }
-.notification{
-    font-family: NotoSans-Regular,sans-serif;
+
+.notification {
+    font-family: NotoSans-Regular, sans-serif;
     padding-left: 6px;
     font-size: 14px;
     text-align: center;
     margin: 15px 0px;
 }
-#start_session{
+
+#start_session {
     text-align: center;
     margin: 15px 0px;
 }
